@@ -4,6 +4,8 @@ Changes to Version 2.0-0
 
   o Support for R Markdown, with script and Rmd tabs.
 
+  o Improved probability plots, plotDistr() convenience function.
+
   o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
 
   o Partial correlations now optionally report pairwise p-values (suggestion of Aaron Swink).
